# homp

./: .~lock.mapinfo.csv#  .~lock.mapinfo1.csv#  CMakeLists.txt  LICENSE.txt  README.md  deviceQuery.gpu.secs.oakland.edu  device_extension_examples.c  devices.ini  devices.yml  graph.graphml  group.graphml  make.config  mapinfo.txt  mapinfo1.csv  mapinfo1.txt  sample.graphml  xomp_cuda_lib.cu
CUDASDK_examples/MonteCarloMultiGPU/: Makefile
CUDASDK_examples/simpleIPC/: Makefile  simpleIPC
CUDASDK_examples/simpleP2P/: Makefile  simpleP2P
CUDASDK_examples/simpleZeroCopy/: Makefile
IEEE Format/: abstract.tex  backup.rtf  bare_jrnl_transmag.tex  bibnotfound.docx  bibtex.bib  contributions.tex  dl.tex  introduction.tex  motivation.tex  pdag.tex  related_work.tex
axpy/: Makefile  Makefile.norose  axpy.c  axpy.h  axpy_ompacc.c  model_results_gpu.secs.ou.txt  results_gpu.secs.ou.txt  rose_axpy.c  rose_axpy_omp.c  rose_axpy_ompacc.c  rose_axpy_ompacc.cu  run-model.sh  run.sh
axpy/bkp/: axpy.h  rose_axpy_ompacc.cu
axpy/sim/: Makefile  axpy.h  rose_axpy.c  rose_axpy_ompacc.c
benchmarks/: 1gpu.ini  2gpu.ini  3samegpu.ini  4gpu.ini  colelctive_results.xlsx  eclipse.ini  fornax-2cpu-2gpu-2mic.ini  fornax-2cpu-2mic.ini  fornax-2cpu-4gpu-2mic.ini  fornax-2cpu-4gpu.ini  fornax-2cpu.ini  fornax-2gpu-2mic.ini  fornax-2gpu.ini  fornax-2mic.ini  fornax-4gpu-2mic.ini  fornax-4gpu.ini  fornax-cpu0-gpu0-mic0.ini  fornax-cpu0-mic0.ini  fornax-cpu0.ini  fornax-gpu0-mic0.ini  fornax-gpu0.ini  fornax-mic0.ini  fornax.ini  gpu0,2.ini  gpu0-1.ini  gpu0-3.ini  gpu0.ini  gpu1.ini  gpu2-3.ini  gpu2.ini  gpu3.ini  host-4gpu.ini  host-gpu0-1.ini  host-gpu0-3.ini  host-gpu0.ini  host-gpu1.ini  host-only.ini  host-thsim.ini  make_hybrid_host_cpu_ini_file  make_hybrid_host_gpu_ini_file  (+2 more)
benchmarks/FDTD3d/: Makefile
benchmarks/axpy/: Makefile  Makefile.bkp  axpy kernel.csv  axpy-kernel-6M.csv  axpy.c  axpy.h  axpy_cpu_omp_kernel.c  axpy_itlmic_kernel.c  axpy_itlmic_wrapper.c  axpy_kernel-6M-auto-model1.csv  axpy_kernel-6M-auto-model2.csv  axpy_kernel-6M-even.csv  axpy_kernel-GPUs-1B-BLOCK.csv  axpy_kernel-GPUs-1B-DYNAMIC-1%.csv  axpy_kernel-GPUs-1B-DYNAMIC-10%.csv  axpy_kernel-GPUs-1B-DYNAMIC-2%.csv  axpy_kernel-GPUs-1B-DYNAMIC-5%.csv  axpy_nvgpu_cuda_kernel.cu  axpy_ompacc.c  axpy_ompacc.cu  model_results_cirrascale.txt  result_cirrascale.txt  rose_axpy.c  rose_axpy_ompacc.c  run-model.sh  run.sh
benchmarks/axpy_clean/: Makefile  READEME.txt  axpy-cpu  axpy.c  axpy.h  axpy_006658A0_000001.plot  axpy_006659C0_000001.plot  axpy_0066A9C0_000001.plot  axpy_00679660_000001.plot  axpy_0067D9C0_000001.plot  axpy_0067E8A0_000001.plot  axpy_00685AB0_000001.plot  axpy_00685D60_000001.plot  axpy_006ABAB0_000001.plot  axpy_006BA660_000001.plot  axpy_006C5AB0_000001.plot  axpy_006C79C0_000001.plot  axpy_006D1460_000001.plot  axpy_006DAEC0_000001.plot  axpy_006FC9C0_000001.plot  axpy_0072F9C0_000001.plot  axpy_0078B9C0_000001.plot  axpy_007959C0_000001.plot  axpy_0079D9C0_000001.plot  axpy_007CE780_000001.plot  axpy_007ECAB0_000001.plot  axpy_007F7D80_000001.plot  axpy_008059C0_000001.plot  axpy_0080F9C0_000001.plot  axpy_0084CAB0_000001.plot  axpy_0088D9C0_000001.plot  axpy_0089DD60_000001.plot  axpy_0089F9C0_000001.plot  axpy_008B49C0_000001.plot  axpy_008D2AB0_000001.plot  axpy_008D3AB0_000001.plot  axpy_008D49C0_000001.plot  axpy_008ECE10_000001.plot  axpy_008ED660_000001.plot  axpy_008F81E0_000001.plot  (+310 more)
benchmarks/blockmatching2d/: bm2d.c  bm2d.h  bm2d_cpu_omp_kernel.c  bm2d_itlmic_kernel.c  bm2d_mdev.c  bm2d_mdev_iteration.c  bm2d_nvgpu_cuda_kernel.cu
benchmarks/bm2d/: Makefile  bm2d.c  bm2d.h  bm2d_cpu_omp_kernel.c  bm2d_itlmic_kernel.c  bm2d_mdev.c  bm2d_mdev_iteration.c  bm2d_nvgpu_cuda_kernel.cu
benchmarks/cirrascal/: deviceQuery  dmesg  hwloc-gather-topologyGB5470.tar.bz2  links
benchmarks/cirrascal-gpu-machine/: cpuinfo  hwloc-gather-topologyGB5470.output  lstopo  top
benchmarks/cpu-gpu-mic-7devs/: axpy_kernel-1000000000-7devs(0(HOSTCPU:0)-1(NVGPU:0)-2(NVGPU:1)-3(NVGPU:2)-4(NVGPU:3)-5(ITLMIC:0)-6(ITLMIC:1)).csv  axpy_kernel-1000000000-BLOCK,10.00,0.00%.csv  axpy_kernel-1000000000-MODEL_1_AUTO,15.00%,0.00%.csv  axpy_kernel-1000000000-MODEL_1_AUTO,15.00%,0.15%.csv  axpy_kernel-1000000000-MODEL_2_AUTO,15.00%,0.00%.csv  axpy_kernel-1000000000-MODEL_2_AUTO,15.00%,0.15%.csv  axpy_kernel-1000000000-MODEL_PROFILE_AUTO,5.00%,0.00%.csv  axpy_kernel-1000000000-MODEL_PROFILE_AUTO,5.00%,0.15%.csv  axpy_kernel-1000000000-SCHED_DYNAMIC,10.00%,0.00%.csv  axpy_kernel-1000000000-SCHED_DYNAMIC,2.00%,0.00%.csv  axpy_kernel-1000000000-SCHED_DYNAMIC,5.00%,0.00%.csv  axpy_kernel-1000000000-SCHED_GUIDED,15.00%,0.00%.csv  axpy_kernel-1000000000-SCHED_PROFILE_AUTO,5.00%,0.00%.csv  axpy_kernel-1000000000-SCHED_PROFILE_AUTO,5.00%,0.15%.csv  bm2d_kernel-256-2devs(5(ITLMIC:0)-6(ITLMIC:1)).csv  bm2d_kernel-256-3devs(0(HOSTCPU:0)-5(ITLMIC:0)-6(ITLMIC:1)).csv  bm2d_kernel-256-7devs(0(HOSTCPU:0)-1(NVGPU:0)-2(NVGPU:1)-3(NVGPU:2)-4(NVGPU:3)-5(ITLMIC:0)-6(ITLMIC:1)).csv  bm2d_kernel-256-MODEL_1_AUTO,15.00%,0.00%.csv  bm2d_kernel-256-MODEL_1_AUTO,15.00%,0.15%.csv  bm2d_kernel-256-MODEL_2_AUTO,15.00%,0.00%.csv  bm2d_kernel-256-MODEL_2_AUTO,15.00%,0.15%.csv  (+58 more)
benchmarks/jacobi/: Makefile  (+12 more)
examples/: addresstranslation.h  mytest.c  numaa  numaa.c  pagemap  pg  pgmp.c  testpgmp.c  v2pfn.py
jacobi/: Makefile  jacobi-ompacc-opt1.c  jacobi_ompacc_mdev.c  readme  result_gpu.secs.ou.txt  rose_jacobi-ompacc-mdev-parallel.cu  rose_jacobi-ompacc-mdev.cu  rose_jacobi-ompacc-opt1-2D-v2.cu  rose_jacobi-ompacc-opt1.cu  run.sh
latex/: Vreadme.txt
matrixmultiplication/: Makefile  Makefile.norose  matmul.c  matmul_mdev.c  results_gpu.secs.ou.txt  rose_matmul.cu  rose_matmul_mdev.cu  rose_matrixmultiply-ompacc-v2.cu  run-model.sh  run.sh
nbody/: Makefile  bodysystemcuda.cu  bodysystemcuda_impl.h  nbody.cpp  readme.txt
runtime/: dev_xthread.c  homp.c  homp.h  homp_dev.c  homp_localth.c  homp_nvgpu.c  nvgpu_cuda.c  nvgpu_cuda.h  omp4.0.h  timer.c  xomp_cuda_lib.cu  xomp_cuda_lib_inlined.cu
simpleZeroCopy/: NsightEclipse.xml  simpleZeroCopy.cu
(+353 files in other folders)
